<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <Button
        android:id="@+id/PlayBtn"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:text="@string/playBtn"
        android:textAllCaps="false"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginRight="168dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/SettingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="156dp"
        android:layout_marginTop="56dp"
        android:text="@string/SettingsBtn"
        android:textStyle="italic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlayBtn" />

    <Button
        android:id="@+id/HighScoreBtn"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/HighScoreBtn"
        android:layout_marginTop="69dp"
        app:layout_constraintTop_toBottomOf="@+id/GoOnline"
        android:layout_marginRight="147dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/GoOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GoOnline"
        android:layout_marginTop="61dp"
        app:layout_constraintTop_toBottomOf="@+id/SettingsBtn"
        android:layout_marginRight="150dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/ExitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ExitBtn"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

</android.support.constraint.ConstraintLayout>
